--- a/react_project/src/App.css
+++ b/react_project/src/App.css
@@ -79,5 +79,68 @@
 }
 
 .banner {
-  border: 2px solid black;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+}
+
+.banner-left {
+  /* position: relative; */
+  max-width: 50%;
+  padding: 2%;
+  margin: 10px;
+  margin-left: 15px;
+  /* border: 2px solid black; */
+  background-color: #ebb866;
+  color: white;
+  /* text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black,
+    2px 2px 0 black; */
+}
+
+.banner-left h1 {
+  /* position: absolute; */
+  font-size: 2.7em;
+  margin-bottom: 20px;
+  animation-duration: 3s;
+  animation-timing-function: ease-out;
+  animation-name: dropdown;
+}
+
+.banner-left p {
+  color: black;
+  /* margin-top: 20%; */
+}
+
+.banner-left div {
+  margin: 20px 0;
+  padding: 20px;
+}
+
+.banner-left div button {
+  margin-right: 10px;
+  padding: 10px 20px;
+  background-color: #55b7a8;
+  color: white;
+  border: 2px dotted grey;
+  transition: transform 300ms;
+}
+
+.banner-left div button:hover {
+  background-color: #4dc9b7;
+  transform: scale(1.1);
+  /* box-shadow: 0px 0px 3px rgb(0, 0, 0); */
+}
+
+.banner-right {
+  position: relative;
+}
+
+.banner-right .work-image {
+  max-width: 100%;
+  height: 500px;
+  margin: 10px;
+  padding-left: 20px;
+  /* position: absolute; */
+
+  /* border: 2px solid black; */
 }
